@@ -40,9 +40,9 @@ void   MD5Init (MD5_CTX *);
 void   MD5Update (MD5_CTX *, const unsigned char *, unsigned int);
 void   MD5Pad (MD5_CTX *);
 void   MD5Final (unsigned char [16], MD5_CTX *);
-char * MD5End(MD5_CTX *, char *);
-char * MD5File(const char *, char *);
-char * MD5FileChunk(const char *, char *, off_t, off_t);
-char * MD5Data(const unsigned char *, unsigned int, char *);
+//char * MD5End(MD5_CTX *, char *);
+//char * MD5File(const char *, char *);
+//char * MD5FileChunk(const char *, char *, off_t, off_t);
+//char * MD5Data(const unsigned char *, unsigned int, char *);
 __END_DECLS
 #endif /* _SYS_MD5_H_ */
